# autovideo-maker

./: README.md  pyproject.toml  requirements.txt  setup.py
autovideo/: base_video_classes.py  generate_pokemon_clip.py  horoscope_script_to_video.py  motivational_script_to_video.py  rebuild_from_config.py  story_understanding.py  streamlit_video_editor.py  tts_utils.py  utils.py  video_generator.py
autovideo/pages/: script_edit.py
docker/: Dockerfile
scripts/: base_video_classes.py  ffmpeg_utils.py  horoscope_script_to_video.py  motivational_script_to_video.py  rebuild_from_config.py  script_to_video.py  singletons.py  story_understanding.py  streamlit_video_editor.py  tts_utils.py  utils.py  video_generator.py  web_api.py
scripts/Streamlit-Image-Carousel/: __init__.py
scripts/pages/: script_edit.py
scripts/tests/: test_story_parsing.py  test_video_element.py
