[tool.poetry]
name = "video_maker"
version = "0.1.0"
description = ""
authors = ["Admor"]
readme = "README.md"
packages = [{include = "autovideo_maker"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
spacy = "^3.5.4"
torch = "^2.0.1"
streamlit = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
